README.md some fixed